--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ctd_fe2_final",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://lety14.github.com/ctd-fe2-final",
+  "homepage": "https://lety14.github.com/ctd-fe2-final",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
@@ -52,12 +52,14 @@
     ]
   },
   "devDependencies": {
+    "@types/redux-mock-store": "^1.0.3",
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "eslint": "^8.19.0",
     "eslint-plugin-react": "^7.30.1",
     "jest-environment-jsdom": "^28.1.2",
+    "redux-mock-store": "^1.5.4",
     "ts-jest": "^28.0.5"
   },
   "jest": {
